<resources>
    <string name="app_name">Framework666 Demo</string>
    <string name="normal_activity_description">这就是一个普通的Activity</string>
    <string name="normal_activity_title">普通Activity</string>

    <string name="normal_component_description">这就是一个普通的组件\n和普通的Activity长得一模一样</string>
    <string name="normal_component_title">普通组件</string>
    <string name="recycler_view_demo_title">回收视图</string>

    <string name="bug_report_contact">到此提issues\nhttps://github.com/Attect/Android-Framework666</string>
    <string name="reset">重置</string>
    <string name="add_one_item">添加一项</string>
    <string name="add_more_items">添加多项</string>
    <string name="update_one_item">更新一项</string>
    <string name="update_more_items">更新多项</string>
    <string name="remove_one_item">移除一项</string>
    <string name="remove_more_items">移除多项</string>
    <string name="remove_all_items">移除所有</string>

    <string name="framework_hate_bug">讨厌BUG!</string>
    <string name="framework_random_crash">随机崩溃!</string>
    <string name="framework_force_anr">无响应</string>
    <string name="framework_play_egg">完蛋</string>
    <string name="framework_gg">GG</string>
    <string name="framework_crash">崩溃</string>

    <string name="framework_bug_title">发生了一些问题</string>
    <string name="framework_bug_message">您可以但不推荐继续使用App</string>

    <string name="label_persistent_cache">持久缓存</string>
    <string name="label_edit_cache">编辑缓存</string>
    <string name="label_large_cache">大缓存</string>
    <string name="cache_component_title">缓存测试</string>
    <string name="text_input_edit_text">文本编辑框</string>
    <string name="load_last_edit_content">恢复上次编辑的内容</string>
    <string name="loading">正在加载</string>
    <string name="write_to_disk">写入</string>
    <string name="check">检查</string>
    <string name="read_file">读取</string>
    <string name="delete">删除</string>
    <string name="no_execute">未执行</string>
    <string name="working">工作中</string>
    <string name="can_not_get_storage_manager">储存空间信息获取失败</string>
    <string name="label_mass_cache">多文件缓存</string>

</resources>
