<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appbarLayoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/recycler_view_demo_title"
                android:textColor="@color/appbarTitleColor"
                android:textSize="@dimen/toolbar_title_text_size" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontalScrollView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@drawable/bottom_navigation_shadow"
            app:layout_constraintBottom_toTopOf="@id/horizontalScrollView" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:divider="@drawable/divider_split_line_vertical"
                android:showDividers="middle">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_one_item"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_more_items"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/updateOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_one_item"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/updateMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_more_items"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/removeOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_one_item"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/removeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_more_items"
                    android:padding="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground" />
            </LinearLayout>

        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>