<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/red_700"
        android:text="@string/framework_hate_bug"
        android:textColor="@color/cover_on_red_700"
        android:textSize="48sp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/mainBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/crash"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.6"
            android:background="@color/blue_900"
            android:text="@string/framework_random_crash"
            android:textColor="@color/cover_on_blue_900"
            android:textSize="42sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/anr"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.4"
            android:background="@color/lime_900"
            android:text="@string/framework_force_anr"
            android:textColor="@color/cover_on_lime_900"
            android:textSize="42sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mainBar"
        android:layout_marginTop="12dp">

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>